# Kevin

./: .cursorrules  .env  .gitattributes  .gitignore  README.md  activate_venv.sh  check_db.py  concurrent_load_results.csv  config.yaml  debug_test.py  debugtasks.md  dev-server.js  dev.sh  history_length_results.csv  install-kevin.sh  install_dependencies.sh  main.py  output.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  response_time_results.csv  run_kevin.py  run_kevin_complete.sh  run_kevin_full.sh  run_kevin_optimized.sh  run_scrape_quiet.sh  scrape_new_universities.sh  semantic_cache_test.py  setup.py  start-chat.sh  start-kevin.sh  start_api.py  stream_output.txt  tasks.md  test_cache.py  test_cache_direct.py  test_deepseek.py  test_integration.py  (+8 more)
exe/: set-env.sh  (+1 more)
profiler/: .gitignore  README.md  README_STANDALONE.md  __init__.py  dependencies.py  docker-compose.yml  install_and_run.sh  main.py  profiler.py  pyproject.toml  requirements.txt  restart_and_test.sh  run.py  run_bdd_tests.sh  setup.py  setup.sh  simple_test.py  simple_ws.py  start_test_env.sh  tasks.md  understand_interactive_qa_enhancements.md  understandme.md
profiler/api/: deps.py
profiler/api/endpoints/: notifications.py
profiler/app/: __init__.py
profiler/app/backend/: README.md  README_OPENAPI.md  __init__.py  config.yaml  openapi_doc.yaml  test_websocket.py
profiler/app/backend/api/: auth.py  dependencies.py  document_routes.py  health.py  main.py  middleware.py  profile_export.py  websocket.py  websocket_handler.py
profiler/app/backend/core/: interfaces.py
profiler/app/backend/core/deepseek/: client.py  r1.py  v3.py
profiler/app/backend/interfaces/: document.py  qa.py  recommendation.py
profiler/app/backend/services/: document_service.py  interfaces.py  qa_service.py  recommender.py
profiler/app/backend/utils/: __init__.py  cache.py  config_manager.py  docx_generator.py  errors.py  html_generator.py  logging.py  migration.py  pdf_generator.py  validation.py
profiler/app/frontend/hooks/: useAuth.ts  useProfile.ts
profiler/app/frontend/types/: profile.ts  qa.ts
profiler/app/shared/: types.ts
profiler/app/ui/: README.md  next.config.js  package.json
profiler/app/ui/app/: layout.tsx  page.tsx
profiler/app/ui/components/: ProfileBuilder.tsx
profiler/data/chroma/: chroma.sqlite3
profiler/db/: base.py  base_class.py  session.py
profiler/db/models/: notification.py
profiler/docs/: authentication_authorization.md  contract-testing.md  db_schema.md  document_lifecycle.md  document_management.md  document_profile_integration.md  document_user_guide.md  personalization_algorithms.md  profile_export_guide.md  qa_architecture.md  recommendation_generation_diagrams.md  recommendation_guide.md  scalability_performance.md  security_permissions.md  template_rendering_process.md  understand_document_management.md  understand_interactive_qa_enhancements.md  understand_persistent_storage.md  understand_profile_export.md  understand_qa_implementation.md  understand_recommendation_engine.md  understand_user_management.md
profiler/docs/api/: document_api.md  profile_export_api.md  websocket_api.yaml
profiler/models/: profile.py  question.py
profiler/profiler/: __init__.py  pyvenv.cfg  setup.py
profiler/profiler/app/backend/: __init__.py
profiler/repositories/: qa_repository_interface.py
profiler/routers/: notification.py  recommendation.py
profiler/scripts/: backup_database.py  db_maintenance.sh  migrate_profiles.py  restore_database.py  test_migration.sh  test_postgres_connection.py
profiler/scripts/init-db/: 01-init.sql
profiler/services/document/: service.py
profiler/services/notification/: client.py  interface.py  mock_service.py  models.py  service.py
profiler/services/profile/: service.py
profiler/services/qa/: __init__.py  answer_quality_service.py  enhanced_qa_service.py  nlp_service.py  qa_integration_service.py  qa_service.py  qa_service_interface.py  question_generation_service.py  service.py
profiler/services/recommendation/: models.py  repository.py  service.py
profiler/tests/: README.md  __init__.py  conftest.py  test_api_complete.py  test_api_endpoints.py  test_auth.py  test_basic.py  test_config.py  test_deepseek_client.py  test_health.py  test_rate_limiter.py  test_services.py  test_switch_section.py  test_websocket.py  test_websocket_integration.py
profiler/tests/api/: test_notification_api.py
profiler/tests/factories/: qa_data_factory.py
profiler/tests/fixtures/: profile_fixtures.py  qa_fixtures.py
profiler/tests/integration/: jest.config.js  jest.setup.ts  package-lock.json  package.json  profile_flow.test.ts
profiler/tests/mocks/: notification_client.py
profiler/tests/requirements/: __init__.py
profiler/tests/requirements/prd_1/: test_authentication.py  test_postgresql_repository.py  test_storage.py
profiler/tests/requirements/prd_2/: test_document_management.py
profiler/tests/requirements/prd_3/: test_profile_export.py
profiler/tests/requirements/prd_4/: __init__.py  acceptance_criteria.md  conftest.py  test_advanced_answer_quality.py  test_answer_quality.py  test_batch_processing.py  test_qa_accessibility.py  test_qa_system.py  test_qa_system_integration.py  test_qa_visual_regression.py  test_question_generation.py
profiler/tests/requirements/prd_5/: test_recommendation_integration.py
profiler/tests/services/document/: test_external.py  test_search.py  test_security.py
profiler/tests/services/recommendation/: test_service.py
profiler/tests/ui/: babel.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json  page.test.tsx  tsconfig.json
profiler/tests/ui/__tests__/: ProfileContext.test.tsx  SectionSwitching.test.tsx  page.test.tsx  profile-workflow.test.tsx  profileStore.test.ts  switch_section.test.ts  websocket.contract.test.ts
profiler/tests/ui/document/: test_document_viewer.tsx
profiler/tests/ui/utils/: test-utils.tsx
profiler/tests/unit/: test_auth_service.py
profiler/tests/utils/: test_database.py
profiler/tools/: generate_client.py  generate_client.sh
(+666 files in other folders)
