[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest.ini_options.markers]
asyncio = "mark test as async"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kevin"
version = "0.1.0"
authors = [
    {name = "Kevin Developers", email = "example@example.com"},
]
description = "AI-powered agent for Canadian university information"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.6",
    "beautifulsoup4>=4.12.2",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "faiss-cpu>=1.7.4",
    "fire>=0.5.0",
    "html2text>=2020.1.16",
    "httpx>=0.24.1",
    "idna>=3.4",
    "nltk>=3.8.1",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "pyyaml>=6.0.1",
    "regex>=2023.10.3",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "six>=1.16.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.1",
    "transformers>=4.34.1",
    "urllib3>=2.0.7",
    "langchain-community>=0.0.22",
    "langchain-core>=0.1.19",
    "langchain-huggingface>=0.0.1",
    "langchain-openai>=0.0.2",
]

[project.urls]
"Homepage" = "https://github.com/qianghan/Kevin"
"Bug Tracker" = "https://github.com/qianghan/Kevin/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["src", "src.core", "src.models", "src.utils", "src.web", "src.rag"]

[project.scripts]
kevin = "src.main:main"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 