[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.pytest.ini_options.markers]
asyncio = "mark test as async"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kevin"
version = "0.1.0"
authors = [
    {name = "Kevin Developers", email = "example@example.com"},
]
description = "AI-powered agent for Canadian university information"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.6",
    "aiofiles>=0.8.0",
    "beautifulsoup4>=4.12.2",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.115.0",
    "fire>=0.5.0",
    "html2text>=2020.1.16",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "idna>=3.4",
    "langgraph>=0.3.5",
    "langgraph-checkpoint>=2.0.18",
    "langgraph-prebuilt>=0.1.2",
    "langgraph-sdk>=0.1.55",
    "langchain-community>=0.0.22",
    "langchain-core>=0.1.19",
    "langchain-huggingface>=0.0.1",
    "langchain-openai>=0.0.2",
    "nltk>=3.8.1",
    "numpy>=1.26.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.8.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "python-json-logger>=2.0.7",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
    "regex>=2023.10.3",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2",
    "six>=1.16.0",
    "starlette>=0.46.0",
    "streamlit>=1.29.0",
    "streamlit-chat>=0.1.1",
    "tenacity>=8.2.3",
    "tqdm>=4.66.1",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "urllib3>=2.0.7",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[project.urls]
"Homepage" = "https://github.com/qianghan/Kevin"
"Bug Tracker" = "https://github.com/qianghan/Kevin/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"], exclude = []}}

[project.scripts]
kevin = "main:main"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
] 